Refactor for better search support

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-mixed-operators": 0
+      "no-mixed-operators": 0,
+      "no-restricted-globals": 0
     }
   },
   "browserslist": {
