--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
     /* paths - import rewriting/resolving */
     "paths": {
       // If you configured any Snowpack aliases, add them here.
+      "~/*": ["src/*"],
       // Add this line to get types for streaming imports (packageOptions.source="remote"):
-      //     "*": [".snowpack/types/*"]
+      "*": [".snowpack/types/*"]
       // More info: https://www.snowpack.dev/guides/streaming-imports
     },
     /* noEmit - Snowpack builds (emits) files, not tsc. */
