--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "serve": "ts-node --project server.tsconfig.json --transpile-only server.ts",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "fastify": "^3.10.1",
+    "fastify-compress": "^3.4.1",
+    "fastify-static": "^3.4.0",
     "preact": "^10.0.0",
+    "public-encrypt": "^4.0.3",
     "snowpack-plugin-hash": "^0.13.0"
   },
   "devDependencies": {
