--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "fastify": "^3.10.1",
     "fastify-compress": "^3.4.1",
     "fastify-static": "^3.4.0",
-    "mdi-preact-es6": "^7.4.1",
     "public-encrypt": "^4.0.3"
   },
   "devDependencies": {
@@ -24,6 +23,7 @@
     "@types/chai": "^4.2.14",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
+    "mdi-paths-split": "^5.9.55",
     "preact": "^10.0.0",
     "snowpack": "^3.0.1",
     "snowpack-plugin-hash": "^0.13.0",
