--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
+    "build": "snowpack build && workbox generateSW",
     "serve": "ts-node --project server.tsconfig.json --transpile-only server.ts",
     "test": "web-test-runner \"src/**/*.test.tsx\""
   },
   "dependencies": {
     "fastify": "^3.10.1",
+    "fastify-caching": "^6.0.1",
     "fastify-compress": "^3.4.1",
     "fastify-static": "^3.4.0",
     "public-encrypt": "^4.0.3"
@@ -27,6 +28,7 @@
     "preact": "^10.0.0",
     "snowpack": "^3.0.1",
     "snowpack-plugin-hash": "^0.13.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "workbox-cli": "^6.0.2"
   }
 }
