--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types", ".graveyard/useGlobalState.tsx"],
+  "include": ["src", "types"],
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
