--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint --fix"
+      "pre-commit": "yarn lint"
     }
   },
   "dependencies": {
