--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A demo of how to make a clean-URL stack router in react",
   "version": "0.1.0",
   "private": true,
+  "license": "ISC",
   "scripts": {
     "start": "snowpack dev --secure",
     "build": "snowpack build && workbox generateSW && ts-node scripts/filterModulepreloads.ts",
@@ -20,8 +21,7 @@
     "fastify": "^3.10.1",
     "fastify-caching": "^6.0.1",
     "fastify-compress": "^3.4.1",
-    "fastify-static": "^3.4.0",
-    "husky": "^4.3.8"
+    "fastify-static": "^3.4.0"
   },
   "devDependencies": {
     "@prefresh/snowpack": "^3.1.0",
@@ -33,6 +33,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
+    "husky": "^4.3.8",
     "eslint": "^7.18.0",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "mdi-paths-split": "^5.9.55",
@@ -41,5 +42,8 @@
     "snowpack-plugin-hash": "^0.13.0",
     "typescript": "^4.0.3",
     "workbox-cli": "^6.0.2"
+  },
+  "engines": {
+    "node": ">=12 <=15"
   }
 }
