--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "@typescript-eslint/parser": "^4.8.1",
     "@web/test-runner": "^0.12.0",
     "chai": "^4.2.0",
-    "husky": "^4.3.8",
     "eslint": "^7.18.0",
     "eslint-plugin-simple-import-sort": "^6.0.1",
+    "husky": "^4.3.8",
     "mdi-paths-split": "^5.9.55",
     "preact": "^10.5.12",
     "snowpack": "^3.0.11",
     "snowpack-plugin-hash": "^0.13.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.3",
     "workbox-cli": "^6.0.2"
   },
