--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "fastify": "^3.10.1",
     "fastify-caching": "^6.0.1",
     "fastify-compress": "^3.4.1",
-    "fastify-static": "^3.4.0"
+    "fastify-static": "^3.4.0",
+		"ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@prefresh/snowpack": "^3.1.0",
