--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "fastify-caching": "^6.0.1",
     "fastify-compress": "^3.4.1",
     "fastify-static": "^3.4.0",
-		"ts-node": "^9.1.1"
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@prefresh/snowpack": "^3.1.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/preact": "^2.0.0",
@@ -39,6 +40,7 @@
     "husky": "^4.3.8",
     "mdi-paths-split": "^5.9.55",
     "preact": "^10.5.12",
+		"react-redux": "^7.2.4",
     "snowpack": "^3.0.11",
     "snowpack-plugin-hash": "^0.14.2",
     "ts-node": "^9.1.1",
