Tests passing and better forms

--- a/package.json
+++ b/package.json
@@ -18,27 +18,26 @@
     "fastify": "^3.10.1",
     "fastify-caching": "^6.0.1",
     "fastify-compress": "^3.4.1",
-    "fastify-static": "^3.4.0",
-    "ts-node": "^9.1.1"
+    "fastify-static": "^3.4.0"
   },
   "devDependencies": {
     "@prefresh/snowpack": "^3.1.0",
     "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.0",
-    "@testing-library/preact": "^2.0.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@testing-library/preact": "^2.0.1",
     "@types/chai": "^4.2.14",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "@web/test-runner": "^0.12.0",
-    "chai": "^4.2.0",
+    "@web/test-runner": "^0.13.3",
+    "chai": "^4.3.4",
     "eslint": "^7.18.0",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "husky": "^6.0.0",
     "mdi-paths-split": "^5.9.55",
-    "preact": "^10.5.12",
-    "snowpack": "^3.0.11",
+    "preact": "^10.5.13",
+    "snowpack": "~3.0",
     "snowpack-plugin-hash": "^0.16.0",
-    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.0.3",
     "workbox-cli": "^6.0.2"
   },
